# rust-sha256-len-extension-attack

./: Cargo.toml  README.md  build.sh
page/: package-lock.json  package.json  worker-configuration.d.ts
page/public/: index.html  worker.js
page/public/pkg/: package.json  rust_sha256_len_extension_attack.d.ts  rust_sha256_len_extension_attack.js  rust_sha256_len_extension_attack_bg.wasm  rust_sha256_len_extension_attack_bg.wasm.d.ts
page/src/: index.ts
src/: lib.rs  utils.rs
wasm-len-extension-attack/: wrangler.jsonc
